--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "downshift": "^9.0.6",
     "next": "14.2.3",
     "next-sanity": "^9.3.10",
     "react": "^18",
